--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/three": "^0.180.0",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
